--- a/index.html
+++ b/index.html
@@ -88,37 +88,37 @@
         // 4. Деление
         // Необходимо сделать так, чтобы функция вернула число, например выражение console.log(sum(2, 6));
         // должно вывести число 8 в консоль(sum - функция сложения в данном примере, ваши названия функций могут отличаться).Округлять значения, которые возвращают функции не нужно, однако, обратите внимание на разность, функция должна вычесть из большего числа меньшее, либо вернуть 0, если числа равны.Функциям всегда передаются корректные числа, проверки на NaN, Infinity делать не нужно.
-        function sumNum(a, b) {
-            return a + b;
-        }
-        let param1 = 1;
-        let param2 = 2;
+        // function sumNum(a, b) {
+        //     return a + b;
+        // }
+        // let param1 = 1;
+        // let param2 = 2;
 
-        console.log(`Сумма чисел ${sumNum(param1, param2)}`);
+        // console.log(`Сумма чисел ${sumNum(param1, param2)}`);
 
-        function vichNum(a, b) {
-            return a - b;
-        }
-        let param3 = 1;
-        let param4 = 2;
+        // function vichNum(a, b) {
+        //     return a - b;
+        // }
+        // let param3 = 1;
+        // let param4 = 2;
 
-        console.log(`разность чисел ${vichNum(param1, param2)}`);
+        // console.log(`разность чисел ${vichNum(param1, param2)}`);
 
-        function umnNum(a, b) {
-            return a + b;
-        }
-        let param5 = 1;
-        let param6 = 2;
+        // function umnNum(a, b) {
+        //     return a + b;
+        // }
+        // let param5 = 1;
+        // let param6 = 2;
 
-        console.log(`умножение чисел ${umnNum(param1, param2)}`);
+        // console.log(`умножение чисел ${umnNum(param1, param2)}`);
 
-        function delNum(a, b) {
-            return a + b;
-        }
-        let param7 = 1;
-        let param8 = 2;
+        // function delNum(a, b) {
+        //     return a + b;
+        // }
+        // let param7 = 1;
+        // let param8 = 2;
 
-        console.log(`Деление чисел ${delNum(param1, param2)}`);
+        // console.log(`Деление чисел ${delNum(param1, param2)}`);
     </script>
 </body>
 
