--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
         // let param8 = 2;
 
         // console.log(`Деление чисел ${delNum(param1, param2)}`);
+
+
+        //adasdasd
     </script>
 </body>
 
